<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.depo.trask.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <argument android:name="authentication"
            android:defaultValue="none" />

        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.depo.trask.fragments.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/containerShippingFragment"
        android:name="com.depo.trask.fragments.ContainerShippingFragment"
        android:label="@string/container"
        tools:layout="@layout/fragment_container_shipping" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.depo.trask.fragments.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.depo.trask.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.depo.trask.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.depo.trask.fragments.SettingsFragment"
        android:label="@string/settings" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:launchSingleTop="false"
        app:popUpTo="@+id/nav_host_fragment"
        app:popUpToInclusive="true"
        />

</navigation>